--- a/main.html
+++ b/main.html
@@ -8,6 +8,14 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+
+	<p style="font-size:14px; color:black;">
+  <span style="font-size:18px; color: red">Before Element</span>
+  This is the main container element 
+  <span style="font-size:18px; color: red">After Element</span> 
+</p>
+
+	
     <script type="text/javascript" src="./script.js">
 </script>
 
