--- a/main.html
+++ b/main.html
@@ -9,11 +9,12 @@
 <body>
 	<!-- the entire body must be written by student -->
 
-	<p style="font-size:14px; color:black;">
+	<div><p style="font-size:14px; color:black;">
   <span style="font-size:18px; color: red">Before Element</span>
   This is the main container element 
   <span style="font-size:18px; color: red">After Element</span> 
 </p>
+	</div>
 
 	
     <script type="text/javascript" src="./script.js">
