--- a/main.html
+++ b/main.html
@@ -10,9 +10,9 @@
 	<!-- the entire body must be written by student -->
 
 	<div><p style="font-size:14px; color:black;">
-  <span style="font-size:18px; color: red">Before Element</span>
+  <span style="font-size:18px; color: rgb(255,0,0);">Before Element</span>
   This is the main container element 
-  <span style="font-size:18px; color: red">After Element</span> 
+  <span style="font-size:18px; color: rgb(255,0,0);">After Element</span> 
 </p>
 	</div>
 
