--- a/main.html
+++ b/main.html
@@ -9,12 +9,10 @@
 <body>
 	<!-- the entire body must be written by student -->
 
-	<div><p style="font-size:14px; color:black;">
-  <span style="font-size:18px; color: rgb(255,0,0);">Before Element</span>
-  This is the main container element 
-  <span style="font-size:18px; color: rgb(255,0,0);">After Element</span> 
-</p>
-	</div>
+	
+    <div>Before Element This is the main container element After Element</div>
+      
+	
 
 	
     <script type="text/javascript" src="./script.js">
