--- a/main.html
+++ b/main.html
@@ -9,12 +9,8 @@
 <body>
 	<!-- the entire body must be written by student -->
 
-	
-    <div>Before Element This is the main container element After Element</div>
+    <div> This is the main container element </div>
       
-	
-
-	
     <script type="text/javascript" src="./script.js">
 </script>
 </body>
